k8s/apps/cats/cats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-web-server
  namespace: default
  labels:
    app: cats-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cats-web-server
  template:
    metadata:
      labels:
        app: cats-web-server
    spec:
      containers:
        - name: web-server
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: cats-html
