k8s/apps/cats/cats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-service
  namespace: default
spec:
  selector:
    app: cats-web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
