k8s/apps/cats/cats-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cats-route
  namespace: default
spec:
  parentRefs:
    - name: cats-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cats-service
          port: 80
